--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ main {
     right: 10px;
     padding: 10px;
     border-radius: 8px;
-    background: #e91e63;
+    background: #191818;
     color: white;
     font-size: 0.9rem;
 }
